:bug: Removed .html from the link

--- a/views/component_party_deputy.ejs
+++ b/views/component_party_deputy.ejs
@@ -27,7 +27,7 @@
 
     document.addEventListener('keyup', (event) => {
       if (event.code === 'Space' && selected_node != null) {
-        window.location.href = `/deputies/${selected_node.id}.html`;
+        window.location.href = `/deputies/${selected_node.id}`;
       }
     })
   </script>
